--- a/style.css
+++ b/style.css
@@ -78,3 +78,52 @@ body {
     font-size: 12px;
     color: white;
 }
+
+/* Section About */
+
+#about {
+    display: flex;
+    justify-content: center; /* space-between*/
+    align-items: center;
+    padding: 50px 10%;
+    background-color: white;
+    min-height: 100vh;
+}
+
+.about-images {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 45%;
+    justify-content: center;
+}
+
+.image1:hover {
+    transform: scale(1.1);
+}
+.image2:hover {
+    transform: scale(1.1);
+}
+
+.image1 {
+    width: 60%;
+    height: 20%;
+    object-fit: cover;
+    margin-top: 30%;
+    margin-left: -35%;
+    border: 3px solid rgb(193, 176, 134);
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px black;
+    z-index: 0;
+}
+.image2 {
+    width: 55%;
+    height: 20%;
+    margin-top: -25%;
+    margin-left: 20%;
+    margin-bottom: 25%;
+    border: 3px solid rgb(193, 176, 134);
+    border-radius: 10px;
+    box-shadow: 8px 8px 15px black;
+    z-index: 1;
+}
