--- a/style.css
+++ b/style.css
@@ -168,3 +168,25 @@ body {
     box-shadow: 2px 15px 20px rgba(0, 0, 0, 0.3);
 }
 
+.sous-titre  {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    margin-left: 10%;
+    text-align: left;
+    color: rgb(44, 43, 43);
+    position: relative;
+    top: -10px;
+}
+
+.sous-titre::after {
+    content: "";
+    display: block;
+    width: 85px;
+    height: 4px;
+    background-color: rgb(193, 176, 134);
+    position: absolute;
+    top: -20px;
+    left: 0;
+} 
+
