--- a/style.css
+++ b/style.css
@@ -78,3 +78,28 @@ body {
     font-size: 12px;
     color: white;
 }
+
+/* Section Amenities */
+
+#amenities {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    background-color: white;
+    height: 100vh;
+    width: 100vw; 
+    position: relative;
+}
+
+.background-con {
+    position: relative;
+    width: 100%;
+    height: 60vh;
+    background: url('images/ami.jpg') no-repeat center center;
+    background-size: cover; 
+    display: flex;
+    align-items: center;
+    justify-content: center; 
+    border: 0.2vw solid rgb(193, 176, 134);
+}
