--- a/style.css
+++ b/style.css
@@ -16,18 +16,18 @@ body {
     background: url(images/home1.jpg) no-repeat center;
     background-size: cover;
     min-height: 100vh;
-    padding: 10px;
+    padding:1vh;
 }
 
 #accueil header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 5%;
+    padding: 1vh 5vw;
 }
 
 .logo img {
-    height: 30px;
+    height: 3vh;
 }
 #accueil header nav{
     display: flex;
@@ -40,6 +40,7 @@ body {
     text-align: center;
     width: 60%;
     color: white;
+    font-size: 0.8vw;
 }
 #accueil header nav a:hover {
     color: #c1b086; 
@@ -48,23 +49,23 @@ body {
 
 #accueil h1 {
     position: relative;
-    margin-left: 15%;
-    margin-top: 15%;
-    padding: 20px;
+    margin-left: 15vw;
+    margin-top: 35vh;
+    padding: 2vh;
     font-family: 'Roboto Slab',serif;
-    font-size: 350%;
+    font-size: 3vw;
     font-style: normal;
     color: white;
     z-index: 1;
 }
 
 #accueil div h1::after {
-    content: "H"; /* Lettre en arrière-plan */
+    content: "H"; 
     position: absolute;
-    transform: translate(-46vh, -30vh); /* Centrage */
-    font-size: 50vh; /* Taille de la lettre */
+    transform: translate(-46vh, -30vh);
+    font-size: 50vh; 
     font-weight: bold;
-    color: rgba(255, 255, 255, 0.2); /* Blanc transparent */
+    color: rgba(255, 255, 255, 0.2); 
     z-index: 0; /* Derrière le texte */
     font-family: 'Roboto Slab',serif;
 }
@@ -72,10 +73,10 @@ body {
 #accueil div p {
     text-align: justify;
     justify-content: right;
-    margin-left: 20%;
-    margin-right: 40%;
+    margin-left: 22vw;
+    margin-right: 40vw;
     font-family: 'Roboto Slab';
-    font-size: 12px;
+    font-size: 0.7vw;
     color: white;
 }
 
@@ -110,8 +111,7 @@ body {
     justify-content: center;
     align-items: flex-start;
     position: absolute;
-    width: 50vw;
-    max-width: 30vw;  
+    width: 40vw; 
     background: rgba(63, 156, 193, 0.7);
     color: white;
     padding: 2vw;
@@ -121,8 +121,8 @@ body {
     transition: background-color 0.3s ease;
     opacity: 0.3;
     height: auto;
-    margin-top: 65vh;
-    margin-left: 50%;
+    margin-top: 30%;
+    margin-left: 40%;
 }
 
 .overlay-text:hover {
@@ -131,12 +131,12 @@ body {
 }
 
 .sous-titre-amt {
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: normal;
 }
 
 .texte-amt {
-    font-size: 12px;
+    font-size: 1rem;
     text-align: justify;
 }
 
@@ -144,7 +144,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1vw;
-    font-size: 12px;
+    font-size: 1rem;
     width: 100%;
 }
 
@@ -170,4 +170,5 @@ body {
     border-radius: 3vw;
     box-shadow: 0.2vw 1.5vw 2vw rgba(0, 0, 0, 0.3);
     transition: 0.3s ease-in-out;
+    font-size: 1rem;
 }
