--- a/style.css
+++ b/style.css
@@ -78,3 +78,64 @@ body {
     font-size: 12px;
     color: white;
 }
+
+/* Section Rooms */
+
+#rooms {
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
+    justify-content: center;
+}
+
+.chambres {
+    display: grid;
+    grid-template-areas:
+        "chambre1 chambre2 chambre3";
+    justify-content: center; 
+    gap: 20px;
+    width: 90%; 
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.chambres div {
+    display: flex;
+    flex-direction: column;
+    height: 80%;
+    border: 3px solid rgb(193, 176, 134); 
+    text-align: left;
+    border-radius: 5%;
+    box-shadow: 5px 10px 10px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+}
+
+.chambres img {
+    width: 100%;
+    height: 80%;
+    object-fit: cover; 
+    border-top-left-radius: 5%;  
+    border-top-right-radius: 5%; 
+    border-bottom-left-radius: 0;  
+    border-bottom-right-radius: 0;
+}
+
+.chambres h3 {
+    margin-top: 10px;
+    font-size: 16px;
+    padding-left: 15px;
+    margin-bottom: 0%;
+    font-weight: normal;
+    color: rgb(44, 43, 43)
+}
+
+.chambres p {
+    font-size: 12px;
+    padding-left: 15px;
+    color: rgb(159, 152, 152);
+}
+
+.chambres span {
+    font-size: 16px;
+    color: rgb(36, 33, 33);
+}
