--- a/style.css
+++ b/style.css
@@ -139,3 +139,26 @@ body {
     font-size: 16px;
     color: rgb(36, 33, 33);
 }
+
+#rooms header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 5%;
+}
+
+#rooms header a {
+    display: flex;;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: white;
+    border: 3px solid white;
+    background-color: rgb(193, 176, 134);
+    width: 80px;
+    height: 30px;
+    border-radius: 25px;
+    padding: 10px 20px;
+    margin-right: 5%;
+    box-shadow: 2px 15px 20px rgba(0, 0, 0, 0.3);
+}
