--- a/style.css
+++ b/style.css
@@ -78,3 +78,25 @@ body {
     font-size: 12px;
     color: white;
 }
+
+/* Section Restaurant */
+
+#restaurant {
+    padding-top: 0;
+    margin-top: 0;
+    position: relative; 
+    clear: both; /* Évite que la section se superpose à l'accueil */
+    margin-top: 1vh;
+    padding-top: 1vh;
+}
+
+.resto {
+    display: flex; 
+    align-items: center;
+    justify-content: center;
+    width: 70vw;
+    height: 70vh;
+    margin: 0 auto;
+    gap: 1vw;
+}
+
