--- a/style.css
+++ b/style.css
@@ -198,3 +198,51 @@ body {
     transition: transform 0.3s ease-in-out;
 }
 
+/* Overlay : caché par défaut */
+.overlay {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    /*top: 100%;*/
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    opacity: 0;
+    transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out; /* bottom 2s ease-in-out;*/
+    transform: translateY(100%); /* Déplacement initial */
+}
+/* Texte overlay */
+.overlay h3, .overlay p {
+    color: white;
+    background-color: rgb(193, 176, 134,0.7);
+    width: 80%;
+    padding: 10px;
+}
+
+.overlay h3 {
+    width: 100%;
+    font-size: 20px;
+    font-weight: normal;
+    text-align: center;
+}
+
+.overlay p {
+    border-radius: 15px;
+    font-size: 13px;
+    text-align: justify;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/* Effet au survol */
+.dish:hover .overlay {
+    bottom: 0; /*top*/
+    opacity: 1;
+    transform: translateY(0); /* Remonte progressivement */
+}
