--- a/style.css
+++ b/style.css
@@ -136,3 +136,63 @@ body {
     box-shadow: 2px 15px 20px rgba(0, 0, 0, 0.3);
 }
 
+input[type="radio"] {
+    display: none;
+}
+
+.gallery-display {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 600px;
+    flex-grow: 1;
+    margin-right: 5%;
+    margin-top: 5%;
+}
+
+/* Style de base pour toutes les images */
+.gallery-item {
+    height: auto;
+    border: 3px solid rgb(193, 176, 134);
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+    object-fit: cover;
+    margin-bottom: 10%;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.5);
+}
+
+.gallery-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Lorsque l'un des inputs est sélectionné, l'image associée devient plus grande */
+#img1:checked ~ .gallery-display label[for="img1"],
+#img2:checked ~ .gallery-display label[for="img2"],
+#img3:checked ~ .gallery-display label[for="img3"],
+#img4:checked ~ .gallery-display label[for="img4"],
+#img5:checked ~ .gallery-display label[for="img5"],
+#img6:checked ~ .gallery-display label[for="img6"],
+#img7:checked ~ .gallery-display label[for="img7"],
+#img8:checked ~ .gallery-display label[for="img8"] {
+    width: 55%;
+}
+
+/* Les autres images deviennent plus petites */
+#img1:checked ~ .gallery-display label:not([for="img1"]),
+#img2:checked ~ .gallery-display label:not([for="img2"]),
+#img3:checked ~ .gallery-display label:not([for="img3"]),
+#img4:checked ~ .gallery-display label:not([for="img4"]),
+#img5:checked ~ .gallery-display label:not([for="img5"]),
+#img6:checked ~ .gallery-display label:not([for="img6"]),
+#img7:checked ~ .gallery-display label:not([for="img7"]),
+#img8:checked ~ .gallery-display label:not([for="img8"]) {
+    width: 3%;
+    filter: blur(1px);
+    border-radius: 50px;
+}
